# DocuMind

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  Makefile  README.md  documind.pen  ui.pen
apps/api-rs/: Cargo.toml
apps/api-rs/examples/: inspect_document.rs  test_lopdf.rs
apps/api-rs/migrations/: 0001_conversation.down.sql  0001_conversation.up.sql  0002_identity.down.sql  0002_identity.up.sql  0003_auth_alignment.down.sql  0003_auth_alignment.up.sql  0003_document_ingestion.down.sql  0003_document_ingestion.up.sql  0004_document_parsing.down.sql  0004_document_parsing.up.sql  0004z_runtime_schema_compat.down.sql  0004z_runtime_schema_compat.up.sql  0005_ingest_clean_chunk.down.sql  0005_ingest_clean_chunk.up.sql  0006_chunk_embeddings_if_missing.down.sql  0006_chunk_embeddings_if_missing.up.sql  0007_parse_result_schema_version_default.down.sql  0007_parse_result_schema_version_default.up.sql  0008_document_tables_nullable_block_id.down.sql  0008_document_tables_nullable_block_id.up.sql  0009_document_tables_runtime_defaults.down.sql  0009_document_tables_runtime_defaults.up.sql  0010_document_table_cells_unique_cell.down.sql  0010_document_table_cells_unique_cell.up.sql  0011_citation_anchor.down.sql  0011_citation_anchor.up.sql  0012_source_anchors.down.sql  0012_source_anchors.up.sql  0013_citation_snapshots.down.sql  0013_citation_snapshots.up.sql  0014_tenant_invitations.down.sql  0014_tenant_invitations.up.sql  0015_tenant_user_system.down.sql  0015_tenant_user_system.up.sql  0016_vector_pipeline.down.sql  0016_vector_pipeline.up.sql  0017_vector_legacy_cleanup.down.sql  0017_vector_legacy_cleanup.up.sql  0018_document_move_deferrable_fks.down.sql  0018_document_move_deferrable_fks.up.sql
apps/api-rs/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  state.rs
apps/api-rs/src/agent/: citation_resolver.rs  generator.rs  kernel.rs  kernel_support.rs  kernel_tests.rs  mod.rs  mode.rs  planner.rs  prompt.rs  reasoner.rs  rewriter.rs  trace_builder.rs  verifier.rs
apps/api-rs/src/api/: account.rs  admin.rs  admin_members.rs  auth.rs  conversations.rs  documents.rs  history.rs  knowledge.rs  mod.rs  runtime_events.rs  system.rs  system_tenant_invitations.rs  system_tenants.rs
apps/api-rs/src/document/: chunking.rs  cleaning.rs  docx.rs  markdown.rs  mod.rs  ocr.rs  pdf.rs  plain_text.rs  pptx.rs  quality.rs  shared.rs  text_utils.rs
apps/api-rs/src/document/chunking/: overlap.rs  postprocess.rs  table.rs
apps/api-rs/src/llm/: generator.rs  mod.rs  openai.rs
apps/api-rs/src/models/: agent.rs  citation.rs  conversation.rs  feedback.rs  identity.rs  message.rs  mod.rs  rag.rs  source_anchor.rs  trace.rs
apps/api-rs/src/rag/: context.rs  embedding.rs  mod.rs  reranker.rs  retriever.rs  vector_document.rs  vector_index.rs  vector_jobs.rs  vector_pipeline.rs  vector_queue.rs  vector_store.rs
apps/api-rs/src/rag/vector_index/: schema.rs
apps/api-rs/src/repositories/: cache.rs  memory.rs  mod.rs  sqlx.rs  trait_repo.rs
apps/api-rs/src/storage/: mod.rs
apps/web/: next.config.ts  package-lock.json  package.json
cli/: .gitignore  README.md  documind.example.toml  package.json  tsconfig.json
cli/examples/: conversation-scenario.json
cli/src/: admin_commands.ts  api.ts  args.ts  chat.ts  commands.ts  config.ts  errors.ts  help.ts  index.ts  render.ts  scenario.ts  sse.ts  types.ts  vector.ts
cli/tests/: admin-api.test.ts  admin-commands.test.ts  args.test.ts  chat.test.ts  config.test.ts  scenario.test.ts  sse.test.ts
crates/web_embed/: Cargo.toml
docs/: implementation-gap-analysis.md  next-step.md  prd.md  production-launch-roadmap.md  tech.md
docs/1-document-parsing/: block-and-chunking.md  document-parsing.md  parser-framework.md  parsing-accuracy.md  storage-model.md  (+1 more)
scripts/: api-test-conversation.py  api-test-ingest.sh  api-test-metrics.sh  api-test-preview-ocr.py  browser-test-fileview.sh  build-linux.sh  deploy.sh  dev-migrate.sh  eval-golden.py  release-gate.sh  test-document-parser-corpus.py
tests/: document-parser-corpus.json
(+169 files in other folders)
