[workspace]
members = [
    "apps/api-rs",
    "crates/web_embed",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "UNLICENSED"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.7"
mime_guess = "2"
percent-encoding = "2"
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
