[workspace]
members = [
    "apps/api-rs",
    "crates/web_embed",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "UNLICENSED"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
aws-config = "1"
aws-credential-types = "1"
aws-sdk-s3 = "1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures = "0.3"
mime_guess = "2"
percent-encoding = "2"
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[profile.release.package.documind]
opt-level = 0
