[package]
name = "documind"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
bcrypt = "0.15"
chrono.workspace = true
dotenvy.workspace = true
futures.workspace = true
jsonwebtoken = "9"
redis = { version = "0.25", features = ["tokio-comp"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
web_embed = { path = "../../crates/web_embed" }
