[package]
name = "documind"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
aws-config.workspace = true
aws-credential-types.workspace = true
aws-sdk-s3.workspace = true
axum = { workspace = true, features = ["multipart"] }
bcrypt = "0.15"
chrono.workspace = true
dotenvy.workspace = true
futures.workspace = true
hex = "0.4"
jsonwebtoken = "9"
pdf-extract = "0.7"
quick-xml = "0.38"
redis = { version = "0.25", features = ["tokio-comp"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
roxmltree = "0.20"
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
tokio.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
unicode-normalization = "0.1"
uuid.workspace = true
web_embed = { path = "../../crates/web_embed" }
zip = { version = "2", default-features = false, features = ["deflate"] }
